@@ -5,3 +5,5 @@ README.md
 tests.R
 todo.txt
 
+^.*\.Rproj$
+^\.Rproj\.user$
