@@ -11,10 +11,10 @@
 #
 # Examples:
 # s <- regressionMetrics(tr,ps,train.y=data[,'Y'])
-# s <- regressionMetrics(tr,ps,stats=c('mse','mae'))
+# s <- regressionMetrics(tr,ps,metrics=c('mse','mae'))
 #
 regressionMetrics <- function(trues,preds,
-                              stats=NULL,
+                              metrics=NULL,
                               train.y=NULL)
 {
     ## Checking preds
@@ -22,14 +22,14 @@ regressionMetrics <- function(trues,preds,
 
     ## Cheking the statistics
     knownMetrics <- c('mae','mse','rmse','mape','nmse','nmae','theil')
-    if (is.null(stats))  # user wants all available stats
-        stats <- if (is.null(train.y)) setdiff(knownMetrics,c("nmse","nmae")) else knownMetrics
+    if (is.null(metrics))  # user wants all available metrics
+        metrics <- if (is.null(train.y)) setdiff(knownMetrics,c("nmse","nmae")) else knownMetrics
     
-    if (any(c('nmse','nmad') %in% stats) && is.null(train.y))
+    if (any(c('nmse','nmad') %in% metrics) && is.null(train.y))
         stop('regressionMetrics:: train.y parameter not specified.',call.=FALSE)
-    if (!all(stats %in% knownMetrics))
+    if (!all(metrics %in% knownMetrics))
         stop("regressionMetrics:: don't know how to calculate -> ",call.=FALSE,
-             paste(stats[which(!(stats %in% knownMetrics))],collapse=','))
+             paste(metrics[which(!(metrics %in% knownMetrics))],collapse=','))
 
     ## copying with missing predictions
     if (length(preds) != length(trues)) {
@@ -48,7 +48,7 @@ regressionMetrics <- function(trues,preds,
         r <- c(r,c(nmse=sse/sum((trues-mean(train.y))^2),
                    theil=sum((trues-preds)^2)/sum((c(train.y[length(train.y)],trues[-length(trues)])-preds)^2),
                    nmae=sae/sum(abs(trues-mean(train.y)))))
-    return(r[stats])
+    return(r[metrics])
 }
 
 # =====================================================================
@@ -61,7 +61,7 @@ regressionMetrics <- function(trues,preds,
 # s <- classificationMetrics(tr,ps,benMtrx=matrix(c(2,-13,-4,5),2,2))
 #
 classificationMetrics <- function(trues,preds,
-                 stats=NULL,
+                 metrics=NULL,
                  benMtrx=NULL,
                  allCls=unique(c(levels(as.factor(trues)),levels(as.factor(preds)))),
                  posClass=allCls[1],
@@ -78,19 +78,19 @@ classificationMetrics <- function(trues,preds,
     knownMetrics <- c(twoClsMetrics,c('acc','err','totU',
                       'microF','macroF',"macroRec","macroPrec"))
 
-    if (is.null(stats)) {
-        stats <- knownMetrics
-        if (length(allCls) > 2) stats <- setdiff(stats,twoClsMetrics)
-        if (is.null(benMtrx))   stats <- setdiff(stats,'totU')
+    if (is.null(metrics)) {
+        metrics <- knownMetrics
+        if (length(allCls) > 2) metrics <- setdiff(metrics,twoClsMetrics)
+        if (is.null(benMtrx))   metrics <- setdiff(metrics,'totU')
     }
 
-    if (any(twoClsMetrics %in% stats) && length(allCls) > 2)
+    if (any(twoClsMetrics %in% metrics) && length(allCls) > 2)
           stop("classificationMetrics:: some of the metrics are only available for two class problems.",call.=FALSE)
-    if (any(c('totU') %in% stats) && is.null(benMtrx))
+    if (any(c('totU') %in% metrics) && is.null(benMtrx))
       stop('classificationMetrics:: benMtrx parameter not specified.',call.=FALSE)
-    if (!all(stats %in% knownMetrics))
+    if (!all(metrics %in% knownMetrics))
       stop("classificationMetrics:: don't know how to calculate -> ",call.=FALSE,
-           paste(stats[which(!(stats %in% knownMetrics))],collapse=','))
+           paste(metrics[which(!(metrics %in% knownMetrics))],collapse=','))
 
     r <- rep(NA,length(knownMetrics))
     names(r) <- knownMetrics
@@ -135,7 +135,7 @@ classificationMetrics <- function(trues,preds,
         r['F'] <- (1+beta^2)*r['prec']*r['rec']/(beta^2*r['prec']+r['rec'])
     }
 
-    if (any(c("macroF","macroRec","macroPrec") %in% stats)) {
+    if (any(c("macroF","macroRec","macroPrec") %in% metrics)) {
         F <- R <- P <- 0
         for(cl in allCls) {
             pr <- cm[cl,cl]/sum(cm[cl,])
@@ -155,7 +155,7 @@ classificationMetrics <- function(trues,preds,
         stop("classificationMetrics:: dimensions of confusion and cost/benefit matrices do not match",call.=FALSE)
       else r['totU'] <- sum(cm*benMtrx)
     
-    return(r[stats])
+    return(r[metrics])
 }   
 
 
